--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -125,6 +125,74 @@
                 <div class="col-md-12">
                     <p>{{game.description}}</p>
                 </div>
+
+                <div class="col-md-8">
+                    <div class="col-xs-12">
+                        <h2>
+                            {{location.name}}
+                        </h2>
+                    </div>
+                        
+                    <div class="col-xs-12">
+                        <div class="col-xs-12 col-sm-8">
+                            <span>{{location.description}}</span>
+                        </div>
+                        <div class="col-xs-12 col-sm-4">
+                            <div class="pull-right">
+                                <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': canRelocateDown(), 'btn-primary': !canRelocateDown() }" @click="relocateDown()" :disabled="!canRelocateDown()">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                    Relocate
+                                </button>
+                            </div>
+
+                            <div class="pull-right">
+                            <button type="button" class="btn btn-primary pull-right" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
+                            </div>
+
+                            <div class="pull-right">
+                                <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': canRelocateUp(), 'btn-primary': !canRelocateUp() }" @click="relocateUp()" :disabled="!canRelocateUp()">
+                                Relocate
+                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <h3>Contracts ({{location.availableContracts.length}}/5) <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button></h3>
+                        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
+                            <div v-for="contract in location.availableContracts" key="contract.name">
+                                <div class="well well-sm">
+                                    <h4>{{contract.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }" @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
+                                    </h4>
+                                    <div v-if="contract.contractAmount != undefined">{{contract.contractAmount}} coins</div>
+                                    <div v-if="contract.requirements != undefined">
+                                        <div v-for="adventurerRequirement in contract.requirements.adventurers">
+                                            {{adventurerRequirement.amount}} {{adventurerRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount), 'text-success': !lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount) }">({{getHiredCount(adventurerRequirement.type)}}/{{adventurerRequirement.amount}})</span>
+                                        </div>
+                                    </div>
+                                    <div>Duration: {{Math.ceil(Math.sqrt(contract.duration)/42)}}/10</div>
+                                    <div>Risk: {{Math.ceil(contract.risk * 10)}}/10</div>
+                                    <div>Reward: {{Math.ceil(contract.rewardFactor * 10)}}/10</div>
+                                    <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining</div>
+                                </div>
+                            </div>
+                        </transition-group>
+                    </div>
+
+                    <div class="col-md-6">
+                        <h3>Adventurers ({{location.availableHires.length}}/5) <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button></h3>
+                        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
+                            <div v-for="adventurer in location.availableHires" key="adventurer.name">
+                                <div class="well well-sm">
+                                    <h4>{{adventurer.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
+                                    </h4>
+                                    <div v-bind:class="{ 'text-danger': expiringDanger(adventurer.expires), 'text-warning': expiringWarning(adventurer.expires), 'text-success': expiringSuccess(adventurer.expires) }">{{readableTime(adventurer.expires - Date.now())}} remaining</div>
+                                </div>
+                            </div>
+                        </transition-group>
+                    </div>
+                </div>
                 <div class="col-md-4">
 
                     <h2>Hired Adventurers</h2>
@@ -180,64 +248,6 @@
                             </div>
                         </div>
                     </transition-group>
-                </div>
-
-                <div class="col-md-8">
-                    <div class="col-md-1">
-                        <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': canRelocateDown(), 'btn-primary': !canRelocateDown() }" @click="relocateDown()" :disabled="!canRelocateDown()">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </button>
-                    </div>
-                    <div class="col-md-10">
-                        <h2>
-                            {{location.name}}
-                            <button type="button" class="btn btn-primary pull-right" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
-                        </h2>
-                        <span>{{location.description}}</span>
-                    </div>
-                    <div>
-                        <div class="col-md-1">
-                            <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': canRelocateUp(), 'btn-primary': !canRelocateUp() }" @click="relocateUp()" :disabled="!canRelocateUp()">
-                            <span class="glyphicon glyphicon-chevron-right"></span>
-                        </button>
-                            <span class="glyphicons glyphicons-chevron-left"></span>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <h3>Contracts ({{location.availableContracts.length}}/5) <button v-if="startAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="startAllContracts()">Start All</button></h3>
-                        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
-                            <div v-for="contract in location.availableContracts" key="contract.name">
-                                <div class="well well-sm">
-                                    <h4>{{contract.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canSendExpedition(contract), 'btn-primary': !canSendExpedition(contract) }" @click="sendExpedition(contract)" :disabled="!canSendExpedition(contract)">Start</button>
-                                    </h4>
-                                    <div v-if="contract.contractAmount != undefined">{{contract.contractAmount}} coins</div>
-                                    <div v-if="contract.requirements != undefined">
-                                        <div v-for="adventurerRequirement in contract.requirements.adventurers">
-                                            {{adventurerRequirement.amount}} {{adventurerRequirement.type}} <span v-bind:class="{ 'text-danger': lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount), 'text-success': !lessthan(getHiredCount(adventurerRequirement.type), adventurerRequirement.amount) }">({{getHiredCount(adventurerRequirement.type)}}/{{adventurerRequirement.amount}})</span>
-                                        </div>
-                                    </div>
-                                    <div>Duration: {{Math.ceil(Math.sqrt(contract.duration)/42)}}/10</div>
-                                    <div>Risk: {{Math.ceil(contract.risk * 10)}}/10</div>
-                                    <div>Reward: {{Math.ceil(contract.rewardFactor * 10)}}/10</div>
-                                    <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining</div>
-                                </div>
-                            </div>
-                        </transition-group>
-                    </div>
-
-                    <div class="col-md-6">
-                        <h3>Adventurers ({{location.availableHires.length}}/5) <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button></h3>
-                        <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
-                            <div v-for="adventurer in location.availableHires" key="adventurer.name">
-                                <div class="well well-sm">
-                                    <h4>{{adventurer.name}} <button type="button" class="btn btn-sm pull-right" v-bind:class="{ 'btn-success': canHire(adventurer.name), 'btn-primary': !canHire(adventurer.name) }" @click="hire(adventurer)" :disabled="!canHire(adventurer.name)">Hire ({{getCost(adventurer.name)}} coins)</button>
-                                    </h4>
-                                    <div v-bind:class="{ 'text-danger': expiringDanger(adventurer.expires), 'text-warning': expiringWarning(adventurer.expires), 'text-success': expiringSuccess(adventurer.expires) }">{{readableTime(adventurer.expires - Date.now())}} remaining</div>
-                                </div>
-                            </div>
-                        </transition-group>
-                    </div>
                 </div>
             </div>
         </div>
