--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -144,7 +144,7 @@
                                     Relocate
                                 </button>
                             </div>
-
+                            
                             <div class="pull-right">
                             <button type="button" class="btn btn-primary pull-right" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
                             </div>
@@ -172,8 +172,11 @@
                                         </div>
                                     </div>
                                     <div>Duration: {{Math.ceil(Math.sqrt(contract.duration)/42)}}/10</div>
+                                    <div class="progress"><div class="progress-bar" v-bind:style="{ width: Math.ceil(Math.sqrt(contract.duration)/42)*10 + '%' }"></div></div>
                                     <div>Risk: {{Math.ceil(contract.risk * 10)}}/10</div>
+                                    <div class="progress"><div class="progress-bar" v-bind:style="{ width: Math.ceil(contract.risk * 10) * 10 + '%' }"></div></div>
                                     <div>Reward: {{Math.ceil(contract.rewardFactor * 10)}}/10</div>
+                                    <div class="progress"><div class="progress-bar" v-bind:style="{ width: Math.ceil(contract.rewardFactor * 10) * 10 + '%' }"></div></div>
                                     <div v-bind:class="{ 'text-danger': expiringDanger(contract.expires), 'text-warning': expiringWarning(contract.expires), 'text-success': expiringSuccess(contract.expires) }">{{readableTime(contract.expires - Date.now())}} remaining</div>
                                 </div>
                             </div>
@@ -182,6 +185,7 @@
 
                     <div class="col-md-6">
                         <h3>Adventurers ({{location.availableHires.length}}/5) <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button></h3>
+                        <div>Coins {{coins}}</div>
                         <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                             <div v-for="adventurer in location.availableHires" key="adventurer.name">
                                 <div class="well well-sm">
