--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -45,10 +45,6 @@
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">Coins: {{coins}}</a></li>
-                        <li><a href="#">Reknown: {{reknownText()}} <span class="text-muted">({{reknown}})</span></a></li>
-                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#" data-toggle="modal" data-target="#stats">Statistics</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#achievements">Achievements</a></li>
@@ -254,7 +250,6 @@
 
                     <div class="col-md-6">
                         <h3>Adventurers ({{location.availableHires.length}}/5) <button v-if="hireAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="hireAll()">Hire All</button></h3>
-                        <div>Coins {{coins}}</div>
                         <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
                             <div v-for="adventurer in location.availableHires" key="adventurer.name">
                                 <div class="well well-sm">
@@ -324,6 +319,14 @@
                 </div>
             </div>
         </div>
+        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+            <div class="container">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Coins: {{coins}}</a></li>
+                    <li><a href="#">Reknown: {{reknownText()}} <span class="text-muted">({{reknown}})</span></a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
 </body>
 
