--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -276,10 +276,21 @@
                 <div class="col-md-4">
 
                     <h2>Hired Adventurers</h2>
-                    <div v-for="adventurer in adventurers">
-                        <div>{{adventurer.plural}}: {{getHiredCount(adventurer.name)}}<span class="text-muted">+{{getAdventurersOnTheJob(adventurer.name)}}</span></div>
-                        <!--<button type="button" class="btn btn-primary btn-xs" @click="hire(adventurer.name)" :disabled="!canHire(adventurer.name)">Hire a {{adventurer.name}} ({{getCost(adventurer.name)}} coins)</button>-->
-                    </div>
+                    <table class="table table-striped table-hover ">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Idle</th>
+                                <th>Out</th>
+                            </tr>
+                        </thead>
+                        <tr v-for="adventurer in adventurers">
+                            <td>{{adventurer.plural}}</td>
+                            <td>{{getHiredCount(adventurer.name)}}</td>
+                            <td>{{getAdventurersOnTheJob(adventurer.name)}}</td>
+                        </tr>
+                    </table>
+
                     <h2>Expeditions</h2>
 
                     <h3>Completed ({{completedExpeditions.length}}) <button v-if="claimAllVisible()" type="button" class="btn btn-success btn-xs pull-right" @click="claimAllCompletedExpeditions()">Claim All</button></h3>
