--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -112,6 +112,12 @@
                         <h4>Statistics</h4>
                     </div>
                     <div class="modal-body">
+                        
+                        <div class="input">
+                            <label>Filter
+                                <input type="input" v-model="options.statFilter"/>
+                            </label>
+                        </div>
                         <table class="table table-striped table-hover ">
                             <thead>
                                 <tr>
@@ -120,7 +126,7 @@
                                     <th>All Time</th>
                                 </tr>
                             </thead>
-                            <tr v-for="stat in stats">
+                            <tr v-for="stat in filteredStats(options.statFilter)">
                                 <td>{{stat.name}}</td>
                                 <td>{{stat.current}}</td>
                                 <td>{{stat.allTime}}</td>
