Fixed top and bottom of content being cut off

--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -29,7 +29,7 @@
 
 <body>
     <div id="AdventurersGame">
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -112,7 +112,7 @@
                         <h4>Statistics</h4>
                     </div>
                     <div class="modal-body">
-                        
+
                         <div class="input">
                             <label>Filter
                                 <input type="input" v-model="options.statFilter"/>
@@ -224,7 +224,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container" style="padding-bottom: 65px;">
             <div class="row">
 
                 <div class="col-md-12">
