--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -328,21 +328,24 @@
                     </table>
 
                     <div v-if="!lessthan(items.length, 1)">
-                    <h2>Items</h2>
-                    <table class="table table-striped table-hover ">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Value</th>
-                                <th>Actions</th>
+                        <h2>Items</h2>
+                        <table class="table table-striped table-hover ">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Value</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tr v-for="item in items">
+                                <td>{{item.name}}</td>
+                                <td><span v-if="item.value !== undefined">{{item.value}}</span></td>
+                                <td>
+                                    <button v-if="canSell(item)" @click="sellItem(item)" class="btn btn-xs btn-success pull-right">Sell</button>
+                                    <button v-if="canUse(item)" class="btn btn-xs btn-info pull-right">Use</button>
+                                </td>
                             </tr>
-                        </thead>
-                        <tr v-for="item in items">
-                            <td>{{item.name}}</td>
-                            <td>{{item.value}}</td>
-                            <td><button class="btn btn-xs">Sell</button></td>
-                        </tr>
-                    </table>
+                        </table>
                     </div>
 
                     <h2>Expeditions</h2>
@@ -378,7 +381,7 @@
                     </transition-group>
 
                     <h3>Running ({{runningExpeditions.length}})</h3>
-                    <transition-group name="custom-classes-transition" enter-active-class="animated fadeIn" leave-active-class="noOutAnimation">
+                    <transition-group name="custom-classes-transition" enter-acti ve-class="animated fadeIn" leave-active-class="noOutAnimation">
                         <div v-for="expedition in runningExpeditions" key="expedition.id">
                             <div class="well well-sm">
                                 <h4>{{expedition.contract.name}}</h4>
