--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -46,6 +46,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#" data-toggle="modal" data-target="#messages">Messages</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#stats">Statistics</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#achievements">Achievements</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#options">Options</a></li>
@@ -115,8 +116,8 @@
 
                         <div class="input">
                             <label>Filter
-                                <input type="input" v-model="options.statFilter"/>
-                            </label>
+                                        <input type="input" v-model="options.statFilter"/>
+                                    </label>
                         </div>
                         <table class="table table-striped table-hover ">
                             <thead>
@@ -130,6 +131,37 @@
                                 <td>{{stat.name}}</td>
                                 <td>{{stat.current}}</td>
                                 <td>{{stat.allTime}}</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Messages Box -->
+        <div id="messages" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4>Messages</h4>
+                    </div>
+                    <div class="modal-body">
+
+                        <div class="input">
+                            <label>Filter
+                                <input type="input" v-model="options.messagesFilter"/>
+                            </label>
+                        </div>
+                        <table class="table table-striped table-hover ">
+                            <tr v-for="message in messages">
+                                <td>{{message.message}}</td>
+                                <td>{{new Date(message.time).toLocaleString()}}</td>
                             </tr>
                         </table>
                     </div>
