--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -46,7 +46,6 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#" data-toggle="modal" data-target="#messages">Messages</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#stats">Statistics</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#achievements">Achievements</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#options">Options</a></li>
@@ -56,7 +55,7 @@
                                 <li><a href="#" data-toggle="modal" data-target="#releaseNotes">Release Notes</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="https://jameshurburgh.github.io/about.html">About the Author</a></li>
-                                <li><a href="https://www.patreon.com/bePatron?u=6205348" target="_blank" class="btn btn-success">Become a Patron!</a></li>
+                                <li><a href="https://www.patreon.com/bePatron?u=6205348" target="_blank">Become a Patron!</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -131,37 +130,6 @@
                                 <td>{{stat.name}}</td>
                                 <td>{{stat.current}}</td>
                                 <td>{{stat.allTime}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Modal Messages Box -->
-        <div id="messages" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4>Messages</h4>
-                    </div>
-                    <div class="modal-body">
-
-                        <div class="input">
-                            <label>Filter
-                                <input type="input" v-model="options.messagesFilter"/>
-                            </label>
-                        </div>
-                        <table class="table table-striped table-hover ">
-                            <tr v-for="message in messages">
-                                <td>{{message.message}}</td>
-                                <td>{{new Date(message.time).toLocaleString()}}</td>
                             </tr>
                         </table>
                     </div>
@@ -301,6 +269,13 @@
                         <a style="padding: 1px 2px;" href="#items" data-toggle="tab" aria-expanded="false">
                             <img width="32px;" src="../img/icons/backpack.png" />
                             <!--<span class="badge">{{location.availableHires.length}}</span>-->
+                        </a>
+                    </li>
+                    <li class="">
+                        <a style="padding: 1px 2px;" href="#messages" data-toggle="tab" aria-expanded="false">
+                            <img v-if="messages.length == 0" width="32px;" src="../img/icons/scroll-unfurled.png" />
+                            <img v-if="messages.length != 0" width="32px;" src="../img/icons/scroll-unfurled-green.png" />
+                            <!--<span class="badge">{{messages.length}}</span>-->
                         </a>
                     </li>
                 </ul>
@@ -465,11 +440,30 @@
                             </div>
                         </transition-group>
                     </div>
+                    <div class="tab-pane fade" id="messages">
+                        <!-- <div class="input">
+                            <label>Filter
+                                <input type="input" v-model="options.messagesFilter"/>
+                            </label>
+                        </div> -->
+                        <table class="table table-striped table-hover ">
+                            <tr v-for="message in messages">
+                                <td>{{message.message}}</td>
+                                <td>{{new Date(message.time).toLocaleString()}}</td>
+                                <td>
+                                    <button type="button" class="btn btn-danger btn-xs pull-right" @click="dismissMessage(message)">X
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
                     <!-- EXAMPLE 
                         <div class="tab-pane fade" id="EXAMPLE">
                         <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo
                             booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit.</p>
-                    </div> -->
+                        </div> 
+                    -->
+
+
                 </div>
             </div>
         </div>
