--- a/www/idle-game-2.html
+++ b/www/idle-game-2.html
@@ -288,33 +288,24 @@
                 </ul>
                 <div id="myTabContent" class="tab-content">
                     <div class="tab-pane fade active in" id="location">
-                        <div class="col-xs-12">
-                            <h2>
-                                {{LocationManager().getCurrentLocation().name}}
-                            </h2>
+                        <div class="col-xs-12 text-center">
+                            <h2>{{LocationManager().getCurrentLocation().name}}</h2>
                         </div>
 
                         <div class="col-xs-12">
-                            <div class="col-xs-12 col-sm-8">
-                                <span>{{LocationManager().getCurrentLocation().description}}</span>
+                            <div class="col-xs-12 col-sm-8 text-centre">
+                                {{LocationManager().getCurrentLocation().description}}
                             </div>
                             <div class="col-xs-12 col-sm-4">
-                                <div class="pull-right">
-                                    <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': LocationManager().canRelocateUp(), 'btn-primary': !LocationManager().canRelocateUp() }" @click="LocationManager().relocateUp()" :disabled="!LocationManager().canRelocateUp()">
-                                            Relocate
-                                            <span class="glyphicon glyphicon-chevron-right"></span>
-                                        </button>
-                                </div>
-
-                                <div class="pull-right">
-                                    <button type="button" class="btn btn-primary pull-right" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
-                                </div>
-                                <div class="pull-right">
-                                    <button type="button" class="btn btn-default" v-bind:class="{ 'btn-success': LocationManager().canRelocateDown(), 'btn-primary': !LocationManager().canRelocateDown() }" @click="LocationManager().relocateDown()" :disabled="!LocationManager().canRelocateDown()">
-                                                <span class="glyphicon glyphicon-chevron-left"></span>
-                                                Relocate
-                                            </button>
-                                </div>
+                                <button type="button" class="btn btn-primary col-xs-12" v-bind:class="{ 'btn-success': canGetFreeCoins(), 'btn-primary': !canGetFreeCoins() }" @click="freeCoins(location)" :disabled="!canGetFreeCoins()">{{location.freeCoinsDescription}}</button>
+                                <button type="button" class="btn btn-default col-xs-6" v-bind:class="{ 'btn-success': LocationManager().canRelocateDown(), 'btn-primary': !LocationManager().canRelocateDown() }" @click="LocationManager().relocateDown()" :disabled="!LocationManager().canRelocateDown()">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                    Relocate
+                                </button>
+                                <button type="button" class="btn btn-default col-xs-6" v-bind:class="{ 'btn-success': LocationManager().canRelocateUp(), 'btn-primary': !LocationManager().canRelocateUp() }" @click="LocationManager().relocateUp()" :disabled="!LocationManager().canRelocateUp()">
+                                    Relocate
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -463,7 +454,7 @@
                         <table class="table table-striped table-hover ">
                             <tr v-for="message in messages">
                                 <td>{{message.message}}</td>
-                                <td><span v-if="!options.showMessageTimeAsRealTime">{{gameTime(message.time)}}</span><span v-if="options.showMessageTimeAsRealTime">{{new Date(message.time).toLocaleString()}}</span></td>
+                                <td><span v-if="!options.showMessageTimeAsRealTime">{{getGameTime(message.time).toString()}}</span><span v-if="options.showMessageTimeAsRealTime">{{new Date(message.time).toLocaleString()}}</span></td>
                                 <td>
                                     <button type="button" class="btn btn-danger btn-xs pull-right" @click="dismissMessage(message)">X
                                 </td>
@@ -487,7 +478,8 @@
                     <li> -->
                         <span class="col-xs-6 label label-primary">{{coins}} coin<span v-if="coins != 1">s</span></span>
                         <span class="col-xs-6 label label-primary">{{renownText()}} ({{renown}})</span>
-                        <span class="col-xs-12 label label-info">{{gameTime()}}</span>
+                        <span class="col-xs-12 label label-info">{{gameDateTime.toFullString()}}</span>
+                        
                     <!-- </li>
                 </ul> -->
             </div>
